# not_that_movie

./: .gcloudignore  .gitignore  README.md  app.py  app.yaml  main.py  pyproject.toml  requirements.in  requirements.txt  schedule.yaml  setup_gcs.sh  user_flow.drawio
.github/workflows/: deploy.yml
app/: __init__.py  cli.py  create_image.py  exceptions.py  gcs_utils.py  get_person_info.py  translate.py  utils.py  views.py
app/data/: 2024_box_office_number_ones.txt  imdb_250.txt  people.txt
app/static/: style.css
app/templates/: index.html
app/tools/: demo.py
data/: 2023_box_office_number_ones.txt  2024_box_office_number_ones.txt  actors.txt  best_selling.txt  directors.txt  movie_list.txt  portrait_prompts.txt  weight_config.json
infra/: README.md  create_buckets.sh  low_object_count_policy.json
src/: constants.py  create_image.py  demo.py  exceptions.py  gcs_utils.py  get_movie_links.py  get_person_info.py  translate.py  utils.py
static/: style.css
static/js/: set_content.js
templates/: index.html
tests/: test_app.py  test_get_person_info.py  test_translate.py  test_utils.py
tests/mocks/: Alien.html  Mike Myers.html
