[project]
name = "not_that_movie"
version = "1.0.0"
description = "Movie alternative recommender app"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4",
    "flask",
    "google-cloud-secret-manager",
    "google-cloud-storage>=2.10.0",
    "googletrans==4.0.2",
    "gunicorn",
    "openai",
]

[dependency-groups]
dev = [
  "ipython>=9.8.0",
  "pytest",
  "pytest-asyncio>=1.3.0",
  "pytest-mock>=3.15.1",
  "pytest-schema",
]
